# besu-qbft-elc

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
e2e/: .env  .gitignore  .ignore  Enclave.mk  Makefile  compose.yml  gen.sh  hardhat.config.js  package-lock.json  package.json
e2e/chains/chain0/: Dockerfile
e2e/chains/chain1/: .gitignore  qbftConfigFile.json
e2e/chains/chain1/network/: genesis.json
e2e/chains/chain1/network/Node-0/data/: key  key.pub
e2e/chains/chain1/network/Node-1/data/: key  key.pub
e2e/chains/chain1/network/Node-2/data/: key  key.pub
e2e/chains/chain1/network/Node-3/data/: key  key.pub
e2e/contracts/: Dependencies.sol  MockApp.sol
e2e/enclave/: Cargo.toml
e2e/enclave/src/: lib.rs
e2e/relayer/: go.mod  go.sum  main.go
e2e/relayer/configs/templates/: ibc0.json.tpl  ibc1.json.tpl
e2e/relayer/scripts/: gen-config.sh  handshake  init-rly  relay
e2e/scripts/: deploy.js  extract-abi.sh  init_lcp.sh  run_e2e_test.sh
elc/: Cargo.toml
elc/src/: client.rs  client_state.rs  commitment.rs  consensus_state.rs  errors.rs  header.rs  lib.rs  message.rs  types.rs
proto/: Cargo.toml
proto-compiler/: Cargo.toml
proto/definitions/ibc/lightclients/qbft/v1/: QBFT.proto
proto/src/: google.rs  lib.rs
proto/src/prost/: ibc.lightclients.qbft.v1.rs
