[package]
name = "besu-qbft-elc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false }
prost = { version = "0.11", default-features = false }
displaydoc = { version = "0.2", default-features = false }
tiny-keccak = { version = "1.4" }
libsecp256k1 = { version = "0.7.1", default-features = false, features = ["static-context", "hmac"] }
rlp = { version = "0.5.2", default-features = false }
ruint = { version = "1.12.3", default-features = false, features = ["serde"] }
hex-literal = "0.4.1"

light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.12", default-features = false }
ethereum-light-client-verifier = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.2.0", default-features = false }
besu-qbft-proto = { path = "../proto", default-features = false }

# fix the following versions to avoid conflict with the compiler version dependencies
parity-scale-codec = { version = "=3.6.4", default-features = false }
parity-scale-codec-derive = { version = "=3.6.4", default-features = false }

[package.metadata.cargo-machete]
ignored = ["parity-scale-codec", "parity-scale-codec-derive"]
